@@ -1,3 +1,6 @@
+2015/10/12:
+Avoid using $(shell pwd) in Makefile, for better Windows compatibility.
+
 2015/10/05:
 Fixed a bug where inconsistent OCaml code was generated when --table
 and --external-tokens were used together. (Reported by Darin Morrison.)
